# evidence-trail

./: .dockerignore  .env.example  .env.gb39901  .env.gb39901_v3  .env.gb39901_v4  .gitignore  CONTRIBUTING.md  DELIVERY.md  Makefile  NOTICE.md  PROJECT_STATUS.md  README.en.md  README.md  README.zh-CN.md  compose.lightrag-app.yaml  compose.yaml  requirements-ui.txt  requirements.txt
apps/: README.md  gradio_pipeline.py
benchmark/: README.md
config/: domain_schema.yml  gb_39901_2025_schema.yml
corpus/: manifest.json
docker/: .dockerignore  README.md
docs/: architecture.md
harness/: ARCHITECTURE.md  PROTOCOL.md  README.md  pyproject.toml
harness/examples/: sample_questions.yaml
harness/reg_harness/: __init__.py  __main__.py  bag_gaps.py  cli.py  compact.py  config.py  guards.py  intent.py  kb.py  librarian.py  live.py  llm.py  loop.py  policies.py  prompts.py  rerank.py  runtime.py  schema_profiles.py  slots.py  structure.py  sufficiency.py  types.py
harness/reg_harness/knowledge/: __init__.py  evidence_catalog.py
harness/reg_harness/tools/: __init__.py  base.py  compose_answer.py  evidence_check.py  finalize.py  lightrag_retrieve.py  precise_lookup.py  registry.py
harness/tests/: test_abc_compose.py  test_bag_gaps.py  test_bag_rerank.py  test_catalog_intent.py  test_catalog_mode.py  test_chunk_backfill.py  test_framework.py  test_guards.py  test_loop_behavior.py  test_p0_assembly.py  test_p1_control.py  test_policies.py  test_prompts_protocol.py  test_slots.py  test_sufficiency.py
lightrag_custom/: gb39901_profile.py  gb39901_profile_v4.py  (+2 more)
(+104 files in other folders)
