[project]
name = "reg-harness"
version = "0.1.0"
description = "EvidenceTrail agent runtime (multi-step evidence bag over LightRAG)"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "pyyaml>=6.0",
]

[project.scripts]
reg-harness = "reg_harness.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["reg_harness*"]
